Fixed linux build process